# gpu-cuda-triton

./: .gitignore  README.md  pyproject.toml
src/cudagraphs/: qwen3.py  qwen3_training.ipynb  qwen3_training.py  train_dummy.py
src/misc/: conv3d.ipynb  conv3d.py  fluffys_quiz.ipynb  notebook.ipynb  triton_sigmoid.ipynb
src/torchdist/: run.sh  tp.py  utils.py
src/tri/: utils.py
src/triton/: vadd.py  vadd2.py
