[project]
name = "gpu-cuda-triton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.9.0",
    "flash-linear-attention>=0.4.0",
    "ipykernel>=7.1.0",
    "lovely-tensors>=0.1.19",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "pytest>=8.4.1",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.54.0",
    "triton>=3.3.1",
]
